# generative_models

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_xpu.txt
plenoxels/diffuse/: InspectProgress.ipynb  model.py  renderer.py  train.py
projects/character_level_gpt/: InspectProgress.ipynb  train_gpt.py
projects/plenoxels/diffuse/: generate_data.py  train.py  visualizer.py
projects/plenoxels/diffuse/.ipynb_checkpoints/: InspectProgress-checkpoint.ipynb  __init__-checkpoint.py  model-checkpoint.py  renderer-checkpoint.py  train-checkpoint.py
projects/plenoxels/diffuse/train_images/: camera_poses.json
projects/plenoxels/plenoptic/: generate_data.py  train.py  visualizer.py
projects/variational_mnist/: InspectProgress.ipynb  train_mnist_vae.py
projects/variational_mnist/.ipynb_checkpoints/: mnist_vae-checkpoint.py
src/generative_models/: utils.py
src/generative_models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/generative_models/diffusion/: model.py
src/generative_models/gpt/: model.py
src/generative_models/gpt/tokenizers/: __init__.py  character_level_tokenizer.py
src/generative_models/plenoxels/: __init__.py  models.py
src/generative_models/plenoxels/diffuse/: __init__.py  model.py
src/generative_models/plenoxels/renderers/: __init__.py  renderer.py  utils.py
src/generative_models/vae/: __init__.py
variational_mnist/: InspectProgress.ipynb  variational_autoencoder.py
