[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[global]
extra-index-url = "https://download.pytorch.org/whl/xpu" 

[project]
name = "generative_models"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]


